<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">SMSEncryption</string>
    <string name="title_contact_detail">Contact</string>
    <string name="title_activity_login">Login</string>
    <string name="loginHint">Login with your username and password</string>
    <string name="passwordHintLabel">Password</string>
    <string name="userNameLabel">Username</string>
    <string name="passwordHint">password here</string>
    <string name="newPasswordHint">new password here</string>
    <string name="userNameHint">username here</string>
    <string name="loginButtonOK">Login</string>
    <string name="action_add_user">Add user</string>
    <string name="title_activity_add_user">Add User</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="addUserActivityHint">Insert your new username and password</string>
    <string name="settingsActivityHint">Change the required details and press save</string>
    <string name="passwordHintConfirm">confirm here</string>
    <string name="oldPasswordHintConfirm">old password here</string>
    <string name="passwordHintLabelConfirm">Confirm Password</string>
    <string name="oldPasswordHintLabel">Old Password</string>
    <string name="addUser">Add User</string>
    <string name="saveSettings">Save settings</string>
    <string name="showNewPasswordFields">Change password</string>
    <string name="Contacts">Contacts</string>
    <string name="action_add_contact">Add contact</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="hello_world">Hello world!</string>
    <string name="addNewContactHint">Enter the details for new contact </string>
    <string name="contactName">Contact Name</string>
    <string name="contactPhoneNumber">Contact Number</string>
    <string name="contactName_hint">name here</string>
    <string name="contactPhoneNumber_hint">(optional)</string>
    <string name="addContact">Add contact</string>
    <string name="saveChanges">Save changes</string>
    <string name="deleteContact">Delete contact</string>
    <string name="copyButton">Copy</string>
    <string name="pasteButton">Paste</string>
    <string name="encryptMessageButton">Encrypt message</string>
    <string name="decryptMessageButton">Decrypt message</string>
    <string name="messageHintLabel">Message</string>
    <string name="messageHint">Enter a message here</string>
    <string android:id="@+id/string1" name="MyKey" android:layout_width="wrap_content" android:layout_height="wrap_content">My Key</string>
    <string android:id="@+id/string1" name="ContactKey" android:layout_width="wrap_content" android:layout_height="wrap_content">Contacts Key</string>
    <string name="action_edit_contact">Edit contact</string>
    <string name="title_activity_edit_contact">Edit Contact</string>
    <string name="editContactHint">Select the contact and edit fields</string>
    <string name="back_button">Back</string>
    <string name="title_settings">Settings</string>
    <string name="settingsmess">Change the username and password,leave blank to keep same as old</string>
    <string name="pword">Password</string>
    <string name="password">password</string>
    <string name="messageLengthTextView">Current Length: </string>

</resources>
