<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
      <item
        android:id="@+id/action_add_contact"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:icon="@drawable/action_add"
        android:title="@string/action_add_contact"/>
      
      <item
        android:id="@+id/action_edit_contact"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:icon="@drawable/action_edit"
        android:title="@string/action_edit_contact"/>
      
      <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:icon="@drawable/action_settings"
        android:title="@string/action_settings"/>
      
      
      <item
        android:id="@+id/action_exit"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:icon="@drawable/action_exit"
        android:title="@string/action_exit"/>
      
</menu>
