<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cos730.smsencryption.UpdateUserActivity$PlaceholderFragment" 
    android:orientation="vertical">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsmess" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/userNameLabel" />

        <EditText
            android:id="@+id/editTextSettingsLoginUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.02"
            android:hint="@string/userNameHint"
            android:inputType="text" 
            android:imeOptions="actionDone">

            <requestFocus />
        </EditText>

    </LinearLayout>

    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewOldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pword" />
        
        <EditText
            android:id="@+id/editTextSettingsLoginOldPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5.91"
            android:hint="@string/password"
            android:inputType="textPassword" 
            android:imeOptions="actionDone"/>

    </LinearLayout>
     
     
    

    <Button
        android:id="@+id/buttonSaveSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveSettings" 
        android:onClick="updateSettings"/>

    
    
</LinearLayout>

</ScrollView>
