<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cos730.smsencryption.AddContact$PlaceholderFragment"
    android:orientation="vertical" >

    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addNewContactHint" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactName" />

        <EditText
            android:id="@+id/editTextNewContactName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/contactName_hint"
            android:inputType="text" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contactPhoneNumber" />

        <EditText
            android:id="@+id/editTextNewContactNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.94"
            android:hint="@string/contactPhoneNumber_hint"
            android:inputType="text" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/MyKey"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    
        
    <EditText
        android:id="@+id/editTextMyKey"
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" />
        
    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:maxWidth="30dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/action_generate"
        android:onClick="GenerateKey"/>

	</LinearLayout>
	
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ContactKey" />

    <EditText
        android:id="@+id/editTextContactKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" />

    

    <!-- add a transparent dividor to stick buttons to the bottom  -->
    <View
	    android:layout_width="1dp"
	    android:background="@drawable/transparent_layout"
	    android:layout_height="0dp"
	    android:layout_weight="0.1"	    />
    
    <Button
        android:id="@+id/buttonAddContact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="addContact"
        android:text="@string/addContact"
        android:drawableLeft="@drawable/action_add" />

</LinearLayout>