<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cos730.smsencryption.EditContact$PlaceholderFragment" 
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editContactHint" />
    
    <Spinner
        android:id="@+id/spinnerContactList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
  	<LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="wrap_content"
	    android:orientation="horizontal" >

     <TextView
            android:id="@+id/textView466"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactName" />

        <EditText
            android:id="@+id/editTextEditContactContactName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/contactName_hint"
            android:inputType="text"
            android:imeOptions="actionDone" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView577"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contactPhoneNumber" />

        <EditText
            android:id="@+id/editTextEditContactContactNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.94"
            android:hint="@string/contactPhoneNumber_hint"
            android:inputType="text" 
            android:imeOptions="actionDone"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView155"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/MyKey"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    
        
    <EditText
        android:id="@+id/editTextEditContactMyKey"
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" 
        android:imeOptions="actionDone"/>
    
        
    <Button
        android:id="@+id/buttonEditContactGenerateKey"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:maxWidth="32dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/action_generate"
        android:onClick="GenerateKey"/>

	</LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ContactKey" />

    <EditText
        android:id="@+id/editTextEditContactContactKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:imeOptions="actionDone" />

    <!-- add a transparent dividor to stick buttons to the bottom  -->
   <!--  <View
	    android:layout_width="1dp"
	    android:background="@drawable/transparent_layout"
	    android:layout_height="0dp"
	    android:layout_weight="0.1"/> -->
    
    <Button
        android:id="@+id/buttonEditContactFinished"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="saveChanges"
        android:text="@string/saveChanges" 
        android:maxHeight="40dp"
        android:drawableLeft="@drawable/action_edit"/>
    
    <Button
        android:id="@+id/buttonEditContactDelete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="deleteContact"
        android:text="@string/deleteContact" 
        android:maxHeight="40dp"
        android:drawableLeft="@drawable/action_delete"/>

</LinearLayout>
</ScrollView>